--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dev": "cross-env NODE_ENV=development concurrently \"npm start --prefix client\" \"nodemon app.js\"",
     "serv": "cross-env NODE_ENV=development concurrently  \"nodemon app.js \"",
     "start": "cross-env NODE_ENV=production concurrently  \"node app.js \"",
-    "build": "npm install && npm install -g @angular/cli && npm run build --prefix client"
+    "build": "npm install && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
