--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development concurrently \"npm start --prefix client\" \"nodemon app.js\"",
     "serv": "cross-env NODE_ENV=development concurrently  \"nodemon app.js \"",
-    "start": "cross-env NODE_ENV=production concurrently  \"node app.js \"",
+    "start": "cross-env NODE_ENV=development concurrently  \"node app.js \"",
     "build": "npm install && npm run build --prefix client"
   },
   "repository": {
