--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development concurrently \"npm start --prefix client\" \"nodemon app.js\"",
+    "dev": "cross-env NODE_ENV=default concurrently \"npm start --prefix client\" \"nodemon app.js\"",
     "serv": "cross-env NODE_ENV=default concurrently  \"nodemon app.js \"",
     "start": "cross-env NODE_ENV=default concurrently  \"node app.js \"",
     "build": "npm install && npm run build --prefix client"
