--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
+    "socket.io": "^4.7.2",
     "validator": "^13.11.0"
   },
   "name": "test_form",
